Fix news element image overflow

--- a/page-making/css/styles.css
+++ b/page-making/css/styles.css
@@ -411,7 +411,7 @@ a:hover {
 }
 .news-element-text {
 	font-family: "GothamPro";
-	font-size: 15px;--
+	font-size: 15px;
 	line-height: 120%;
 }
 /*? === MAIN END === */
